--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
 
 services:
   full-name:
-#    base-url: http://65.2.39.42:3003/fullname
-    base-url: http://localhost:3003/fullname
+    base-url: http://65.2.39.42:3003/fullname
+#    base-url: http://localhost:3003/fullname
   greeting:
-#    base-url: http://65.2.39.42:3001/greeting
-    base-url: http://localhost:3001/greeting
+    base-url: http://65.2.39.42:3001/greeting
+#    base-url: http://localhost:3001/greeting
