--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
         <artifactId>springdoc-openapi-ui</artifactId>
         <version>1.6.15</version> <!-- works with Spring Boot 2.x -->
     </dependency>
+    
+    <dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-validation</artifactId>
+	</dependency>
+
 
     <!-- Optional: Lombok to reduce boilerplate code -->
     <dependency>
